--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -35,6 +35,8 @@
                 <div class="loader"></div>
                 <p>Generating result...</p>
             </div>
+            <button id="retake-btn">Retake Quiz</button>
+            <div id="retake-message" class="error"></div>            
         </div>
     </div>
 
