--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -24,7 +24,7 @@
                 <button type="submit">Start Quiz</button>
             </form>
             <div id="login-message"></div>
-            <button id="back-to-courses" type="button">← Back to Courses</button>
+            <!-- <button id="back-to-courses" type="button">← Back to Courses</button> -->
         </div>
 
         <div class="quiz-screen hidden" id="quiz-screen">
